# disaster-declarations

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-colab.txt
chapter_2/: Chapter_2.ipynb
chapter_3/: Chapter_3.ipynb
data/: Article_2_-_State_EJ_Framework_Inventory_v4.xlsx  Coastal Counties.xlsx  Ruralurbancontinuumcodes2023.csv  SVI_2000_US_county.csv  SVI_2010_US_county.csv  SVI_2014_US_county.csv  SVI_2016_US_county.csv  SVI_2022_US_county.csv
