[project]
name = "disaster-declarations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas==1.1.3",
    "ipywidgets==8.1.8",
    "jupyterlab==4.5.7",
    "linearmodels==7.0",
    "matplotlib==3.10.0",
    "matplotlib-inline==0.2.2",
    "matplotlib-venn==1.1.2",
    "numpy==2.0.2",
    "openpyxl==3.1.5",
    "pandas==2.2.2",
    "pandas-datareader==0.10.0",
    "pandas-gbq==0.30.0",
    "pandas-stubs==2.2.2.240909",
    "pyfixest==0.50.1",
    "scikit-learn==1.6.1",
    "scipy==1.16.3",
    "sklearn-pandas==2.2.0",
    "statsmodels==0.14.6",
]
